# nzx_app_v2_backend

./: .dockerignore  .env.development  .env.example  .env.production  .gitignore  .vercelignore  Dockerfile  api.py  api_endpoints.py  app.yaml  basic_api.py  bill_reader.py  debug.py  index.py  main.py  minimal.py  package.json  pyproject.toml  render.yaml  render_app.py  requirements.txt  run_local.py  simple.py  start.py  start.sh  test.py  test_app.py  test_db.py  test_deploy.py  test_env.py  vercel.json
.ebextensions/: 01_fastapi.config
.github/workflows/: deploy.yml
api/: health.py
app/api/: api.py
app/api/endpoints/: assets.py  auth.py  debug.py  organizations.py  portfolios.py  test.py  users.py
app/core/: auth.py  config.py  db.py
app/models/: __init__.py  asset.py  organization.py  portfolio.py  user.py
nzx_backend_env/: pyvenv.cfg
nzx_backend_env/Scripts/: activate  activate.bat
scripts/: run_tests.bat  run_tests.sh  test_models.py  test_supabase.py  verify_env.py
